[package]
name = "cccl-composer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["suggestions", "color"] }
clap_complete = { version = "3.2" }
config = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
prettytable-rs = "^0.8"
indicatif = "0.17"
dirs = "4.0"
regex = "1"
rayon = "1.5"
colored = "2"
